<resources>
    <string name="app_name">Ft_hangouts</string>
    <!-- Main Activity -->
    <string name="btn_add_contact_title">Add Contact</string>
    <string name="no_contacts_txt">No contacts yet</string>
    <!-- Create Contact Activity & Manage Contact-->
    <string name="btn_delete_contact_title">Delete Contact</string>
    <string name="btn_save_contact_title">Save Contact</string>
    <string name="btn_select_picture_title">Select Picture</string>
    <string name="picture_txt">Picture</string>
    <string name="nick_name_hint">Enter Nick Name</string>
    <string name="nick_name_txt">Nick Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="last_name_txt">Last Name</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="first_name_txt">First Name</string>
    <string name="phone_number_hint">Enter Number</string>
    <string name="phone_number_txt">Phone Number</string>
    <string name="default_picture_txt">default picture</string>
    <!-- Settings Activity -->
    <string name="languages_txt">Languages</string>
    <string name="btn_language_default">Default</string>
    <string name="btn_language_english">English</string>
    <string name="header_colors_txt">Header Colors</string>
    <string name="btn_color_default">Default</string>
    <string name="btn_color_black_white">Black &amp; White</string>
    <string name="btn_color_blue">Blue</string>
    <string name="btn_color_orange">Orange</string>
    <!-- Contact List Item Activity -->
    <string name="contact_image_description">Contact Image</string>
    <string name="contact_name_txt">Name</string>
    <string name="contact_last_name_txt">Last Name</string>
    <string name="ic_client_manager_description">Client Manager</string>
    <string name="ic_messages_description">Messages</string>
    <!-- Custom action bar -->
    <string name="left_arrow_icon">left arrow icon</string>
    <string name="settings_icon">settings icon</string>
    <string name="background_time_message">App was put in background at %1$s</string>
</resources>