<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.SettingsActivity">

    <include
        android:id="@+id/custom_action_bar"
        layout="@layout/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/phoneNumberTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/belgrano"
        android:text="@string/languages_txt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="52dp" />

    <Button
        android:id="@+id/btnLanguageDefault"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_language_default"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTxt" />

    <Button
        android:id="@+id/btnLanguageEnglish"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/btn_language_english"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btnLanguageDefault" />

    <TextView
        android:id="@+id/colorsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/belgrano"
        android:text="@string/header_colors_txt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnLanguageDefault" />

    <Button
        android:id="@+id/btnColorDefault"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_color_default"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/colorsTxt" />

    <Button
        android:id="@+id/btnColorBlackWhite"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/btn_color_black_white"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btnColorDefault" />

    <Button
        android:id="@+id/btnColorBlue"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_color_blue"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/btnColorDefault"
        app:layout_constraintTop_toBottomOf="@+id/btnColorDefault" />

    <Button
        android:id="@+id/btnColorOrange"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/btn_color_orange"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btnColorBlue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="227dp" />


</androidx.constraintlayout.widget.ConstraintLayout>