<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="2dp"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_border"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:id="@+id/imgContactRL"
            android:layout_width="120dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/contactImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/contact_image_description"
                android:padding="10dp"
                android:src="@drawable/default_avatar" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/imgContactRL">

            <TextView
                android:id="@+id/contactFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contact_name_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contactLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactFirstName"
                android:layout_marginTop="10dp"
                android:text="@string/contact_last_name_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icClientManager"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_below="@+id/contactLastName"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/ic_client_manager_description"
                android:src="@drawable/ic_client_manager" />

            <ImageView
                android:id="@+id/icMessage"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_below="@+id/contactLastName"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/ic_messages_description"
                android:src="@drawable/ic_messages" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>